[137580] externalized driver extension strings in ..db.generic

--- a/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.properties
@@ -1,3 +1,15 @@
 # properties file for org.eclipse.datatools.connectivity.db.generic
 Bundle-Vendor = Eclipse.org
 Bundle-Name = Generic DB Connectivity Plug-in
+driverClass = Driver Class
+driverVendor = Vendor
+driverVersion = Version
+driverDBName = Database Name
+driverConnectionURL = Connection URL
+driverUID = User ID
+driverPWD = Password
+org.eclipse.datatools.connectivity.db.driverCategory = Database
+org.eclipse.datatools.connectivity.db.db2udb.genericDriverTemplate = IBM DB2 Universal for DB2 UDB V8.2
+org.eclipse.datatools.connectivity.db.sybase.genericDriverTemplate = Sybase JDBC Driver for Sybase 12.x
+org.eclipse.datatools.connectivity.db.generic.genericDriverTemplate = Generic JDBC Driver
+org.eclipse.datatools.connectivity.db.oracle.genericDriverTemplate = Oracle JDBC Driver for Oracle 10
