--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/plugin.properties
@@ -2,3 +2,5 @@ Routineeditor.edit= &Edit...
 Routineeditor.run= &Run...
 
 Routineeditor.name=Routine Editor
+
+routine.launch.type=Eclipse Data Tools
