--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.properties
@@ -10,3 +10,5 @@ context.editingSQL.description=Editing SQL
 
 sqlProblemName=SQL Syntax Validation Problem
 sqlPortabilityName=SQL Portability Task
+
+database.development.perspective=Database Development
