--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.xml
@@ -44,7 +44,7 @@
    <extension
          point="org.eclipse.ui.perspectives">
       <perspective
-            name="Database Development"
+            name="database.development.perspective"
             icon="icons/DB_dev_perspective.gif"
             class="org.eclipse.datatools.sqltools.sqleditor.perspectives.EditorPerspective"
             id="org.eclipse.datatools.sqltools.sqleditor.perspectives.EditorPerspective">
