Fix translation related defects (marked with "Mock")

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/SQLEditorResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/SQLEditorResources.properties
@@ -20,8 +20,8 @@ SQLErrorHover_makeStickyHint=Press {0} for focus_
 
 ## Resources for the Set Statement Terminator dialog and composite panel
 
-SQLEditor_setStatementTerminatorDialog_title  = Set Statement Terminator
-SQLEditor_setStatementTerminatorDialog_prompt = Statement terminator:
+#SQLEditor_setStatementTerminatorDialog_title  = Set Statement Terminator
+#SQLEditor_setStatementTerminatorDialog_prompt = Statement terminator:
 
 ## Resources for the Outline view
 
@@ -30,19 +30,19 @@ SQLEditor_outlinePage_sqlSegment_titlePattern=position {0}
 ## Resources for the database connection management
 
 SQLEditor_connection_status_noConnection = No connection
-SQLEditor_connection_errorDialog_title   = Connection Exception
-SQLeditor_connection_errorDialog_message = Connection has failed_ The following error was reported:\n"{0}"
+#SQLEditor_connection_errorDialog_title   = Connection Exception
+#SQLeditor_connection_errorDialog_message = Connection has failed_ The following error was reported:\n"{0}"
 
 ## Miscellaneous resources
 
-SQLEditor_textHover_emptySelection=empty selection
-SQLEditor_error_save_message=Save could not be completed_ {0}
-SQLEditor_error_save_title=Problems During Save As___
-SQLEditor_warning_save_delete=The original file ''{0}'' has been deleted_
+#SQLEditor_textHover_emptySelection=empty selection
+#SQLEditor_error_save_message=Save could not be completed_ {0}
+#SQLEditor_error_save_title=Problems During Save As___
+#SQLEditor_warning_save_delete=The original file ''{0}'' has been deleted_
 
 plugin_internal_error=SQLEditor plugin internal error
 
-AbstractSQLHover_makeStickyHint=Press {0} for focus_
+#AbstractSQLHover_makeStickyHint=Press {0} for focus_
 
 SQLEditorConnectionInfo_decode_error=Failed to decode SQLEditorConnectionInfo from {0}
 
@@ -50,7 +50,7 @@ SQLEditorConnectionInfo_decode_error=Failed to decode SQLEditorConnectionInfo fr
 # Editor Framework
 # ==============================================================================
 EditorManager_operationFailed = {0} Failed
-EditorManager_saveChangesQuestion = ''{0}'' has been modified_ Save changes to update the syntax highlighting?
+#EditorManager_saveChangesQuestion = ''{0}'' has been modified_ Save changes to update the syntax highlighting?
 
 Save = Save
 
