Update about.html file for new content

--- a/plugins/org.eclipse.datatools.connectivity/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity/plugin.properties
@@ -8,7 +8,7 @@
 ## Contributors:
 ##    Sybase, Inc. - initial API and implementation
 ################################################################################ 
-Plugin.Name = Data Tools Connectivity Plug-in
+Plugin.Name = Data Tools Platform Connectivity Plug-in
 Plugin.ProviderName = Eclipse.org
 
 extension-point.name.connectionProfile = Connection Profile Extension
