--- a/plugins/org.eclipse.datatools.connectivity.db.generic.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic.ui/plugin.properties
@@ -1,4 +1,4 @@
 # properties file for org.eclipse.datatools.connectivity.db.generic.ui
 Bundle-Vendor = Eclipse.org
-Bundle-Name = Generic DB UI Plug-in
+Bundle-Name = Eclipse Data Tools Platform Generic DB UI Plug-in
 page.name.jdbcConnectionProperties = JDBC Connection Properties
