--- a/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.properties
@@ -1,6 +1,6 @@
 # properties file for org.eclipse.datatools.connectivity.db.generic
 Bundle-Vendor = Eclipse.org
-Bundle-Name = Generic DB Connectivity Plug-in
+Bundle-Name = Eclipse Data Tools Platform Generic DB Connectivity Plug-in
 driverClass = Driver Class
 driverVendor = Vendor
 driverVersion = Version
