--- a/plugins/org.eclipse.datatools.connectivity.dbdefinition.genericJDBC/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.dbdefinition.genericJDBC/plugin.properties
@@ -8,7 +8,7 @@
 # Contributors:
 #     IBM Corporation - initial API and implementation
 ###############################################################################
-pluginName=DBDefinition Generic JDBC Plug-in
+pluginName=Eclipse Data Tools Platform DBDefinition Generic JDBC Plug-in
 providerName=Eclipse.org
 1.0_ProductString = Generic JDBC
 1.0_VersionString = 1.0
