Update about.html file for new content

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/plugin.properties
@@ -8,7 +8,7 @@
 # Contributors:
 #     IBM Corporation - initial API and implementation
 ###############################################################################
-pluginName=RDB Core
+pluginName=Eclipse Data Tools Platform SQM Core Plug-in
 providerName=Eclipse.org
 databaseDefinitionExtensionPointName=Database Definition
 logicalContainmentExtensionPointName=Logical Containment
