--- a/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.server.ui/plugin.properties
@@ -8,7 +8,7 @@
 # Contributors:
 #     IBM Corporation - initial API and implementation
 ###############################################################################
-pluginName=Server Explorer plugin
+pluginName=Eclipse Data Tools Platform Server UI Plug-in
 providerName=Eclipse.org
 serverExplorerLayout=Server Explorer Layout Extension
 serverExplorerInitialization=Server Initialization Provider
