--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
@@ -8,7 +8,7 @@
 ## Contributors:
 ##    Sybase, Inc. - initial API and implementation
 ################################################################################ 
-Plugin.Name = DTP Data Source Explorer Plug-in
+Plugin.Name = Eclipse Data Tools Platform Data Source Explorer Plug-in
 Plugin.ProviderName = Eclipse.org
 
 DSE.Connect.label = &Connect
