--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
@@ -8,7 +8,7 @@
 ## Contributors:
 ##    Sybase, Inc. - initial API and implementation
 ################################################################################ 
-Plugin.Name = Data Tools Connectivity UI Plug-in
+Plugin.Name = Data Tools Platform Connectivity UI Plug-in
 Plugin.ProviderName = Eclipse.org
 
 Database.category = Databases
