Update about.html file for new content

--- a/plugins/org.eclipse.datatools.modelbase.dbdefinition/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.dbdefinition/plugin.properties
@@ -29,5 +29,5 @@
 # %%% END OF TRANSLATED PROPERTIES %%%
 # ====================================================================
 
-pluginName = DBDefinition Model
+pluginName = Eclipse Data Tools Platform DBDefinition Model
 providerName = Eclipse.org
