--- a/plugins/org.eclipse.datatools.modelbase.sql/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql/plugin.properties
@@ -29,5 +29,5 @@
 # %%% END OF TRANSLATED PROPERTIES %%%
 # ====================================================================
 
-pluginName = SQLModel Plug-in
+pluginName = Eclipse Data Tools Platform SQLModel Plug-in
 providerName = Eclipse.org
