Update about.html file for new content

--- a/plugins/org.eclipse.datatools.modelbase.sql.edit/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.edit/plugin.properties
@@ -13,7 +13,7 @@
 #<copyright>
 # </copyright>
 #
-# $Id: plugin.properties,v 1.4 2006/03/09 23:46:15 dpchou Exp $
+# $Id: plugin.properties,v 1.5 2006/03/28 21:45:39 dpchou Exp $
 #/
 
 # ====================================================================
@@ -28,7 +28,7 @@
 # %%% END OF TRANSLATED PROPERTIES %%%
 # ====================================================================
 
-pluginName = SQLModel Edit Plug-in
+pluginName = Eclipse Data Tools Platform SQLModel Edit Plug-in
 providerName = Eclipse.org
 
 _UI_CreateChild_text = {0}
