--- a/plugins/org.eclipse.datatools.modelbase.sql.edit/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.edit/build.properties
@@ -3,7 +3,7 @@
  * <copyright>
  * </copyright>
  *
- * $Id: build.properties,v 1.4 2006/02/23 16:25:53 jgraham Exp $
+ * $Id: build.properties,v 1.5 2006/03/11 00:25:22 dpchou Exp $
  */
 -->
 bin.includes = plugin.xml,\
@@ -18,7 +18,7 @@ output.sqlmodel.edit.jar = bin/
 
 jars.extra.classpath =
 src.dir =		src/
-plugin.version =	0.7.0.200602241
+plugin.version =	0.9.0.200605101
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
