--- a/plugins/org.eclipse.datatools.modelbase.sql.query/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.query/plugin.properties
@@ -2,7 +2,7 @@
 # ====================================================================
 
 # ====================================================================
-# $Id: plugin.properties,v 1.2 2005/12/17 01:46:21 bpayton Exp $
+# $Id: plugin.properties,v 1.3 2006/03/06 22:00:54 jgraham Exp $
 # @generated NOT
 # ====================================================================
 
@@ -18,7 +18,7 @@
 # %%% END OF TRANSLATED PROPERTIES %%%
 # ====================================================================
 
-pluginName = SQL Query Model Plugin
+pluginName = Eclipse Data Tools Platform SQL Query Model Plugin
 nl1PluginName = SQL Query Model Nl1 Fragment
 providerName = Eclipse.org
 
