--- a/plugins/org.eclipse.datatools.modelbase.sql.xml.query/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.xml.query/plugin.properties
@@ -2,7 +2,7 @@
 # ====================================================================
 
 # ====================================================================
-# $Id: plugin.properties,v 1.2 2005/12/17 01:52:31 bpayton Exp $
+# $Id: plugin.properties,v 1.3 2006/03/06 22:01:44 jgraham Exp $
 # @generated NOT
 # ====================================================================
 
@@ -18,6 +18,6 @@
 # %%% END OF TRANSLATED PROPERTIES %%%
 # ====================================================================
 
-pluginName = SQL XML Query Model Plugin
+pluginName = Eclipse Data Tools Platform SQL XML Query Model Plugin
 nl1PluginName = SQL XML Query Model Nl1 Fragment
 providerName = Eclipse.org
