Update about.html file for new content

--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/plugin.properties
@@ -11,6 +11,6 @@
 #
 
 !-- plugin.xml 
-pluginName = SQL Query Parser Plugin
+pluginName = Eclipse Data Tools Platform SQL Query Parser Plugin
 nl1PluginName 	= SQL Query Parser Nl1 Fragment
 providerName = Eclipse.org
