--- a/tests/org.eclipse.datatools.sqltools.db.generic.test/build.properties
+++ b/tests/org.eclipse.datatools.sqltools.db.generic.test/build.properties
@@ -6,7 +6,7 @@ bin.includes = META-INF/,\
                genericdbtest.jar
 jars.extra.classpath =
 src.dir =		src/
-plugin.version =	0.7.0
+plugin.version =	0.9.0.200605101
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
