--- a/tests/org.eclipse.datatools.sqltools.parsers.sql.query.test/plugin.xml
+++ b/tests/org.eclipse.datatools.sqltools.parsers.sql.query.test/plugin.xml
@@ -3,7 +3,7 @@
 <plugin
    id="org.eclipse.datatools.sqltools.parsers.sql.query.test"
    name="Test1 Plug-in"
-   version="1.0.0"
+   version="0.9.0.200605101"
    provider-name="IBM"
    class="org.eclipse.datatools.sqltools.parsers.sql.query.test.TestPlugin">
 
