--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
@@ -1,6 +1,6 @@
 ! Properties file for component:  SQL Scrapbook
 
-pluginName   = Sqlscrapbook Plug-in
+pluginName   = Eclipse Data Tools Platform Sqlscrapbook Plug-in
 providerName = Eclipse.org
 
 _UI_MENU_SELECT_CONNECTION= Select &Connection
