--- a/tests/org.eclipse.datatools.sqltools.parsers.sql.xml.query.test/plugin.xml
+++ b/tests/org.eclipse.datatools.sqltools.parsers.sql.xml.query.test/plugin.xml
@@ -3,8 +3,8 @@
 <plugin
    id="org.eclipse.datatools.sqltools.parsers.sql.xml.query.test"
    name="Test Plug-in"
-   version="1.0.0"
-   provider-name="IBM"
+   version="0.9.0.200605101"
+   provider-name="Eclipse.org"
    class="org.eclipse.datatools.sqltools.parsers.sql.xml.query.test.TestPlugin">
 
    <runtime>
