--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/SQLEditorResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/SQLEditorResources.properties
@@ -16,7 +16,7 @@ SQLUpdater_nonportable=Not portable to {0}:
 SQLUpdater_error_location=Failed to get marker location
 SQLUpdater_error_annotation=Error occurred while updating annotations
 SQLUpdater_error_removemarker=Error occurred while removing markers
-SQLErrorHover_makeStickyHint=Press {0} for focus_
+SQLErrorHover_makeStickyHint=Press {0} for focus.
 
 ## Resources for the Set Statement Terminator dialog and composite panel
 
@@ -37,12 +37,12 @@ SQLEditor_connection_status_noConnection = No connection
 
 #SQLEditor_textHover_emptySelection=empty selection
 #SQLEditor_error_save_message=Save could not be completed_ {0}
-#SQLEditor_error_save_title=Problems During Save As___
-#SQLEditor_warning_save_delete=The original file ''{0}'' has been deleted_
+#SQLEditor_error_save_title=Problems During Save As__.
+#SQLEditor_warning_save_delete=The original file ''{0}'' has been deleted.
 
 plugin_internal_error=SQLEditor plugin internal error
 
-#AbstractSQLHover_makeStickyHint=Press {0} for focus_
+#AbstractSQLHover_makeStickyHint=Press {0} for focus.
 
 SQLEditorConnectionInfo_decode_error=Failed to decode SQLEditorConnectionInfo from {0}
 
