--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/ConstructedSQLEditorResources.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/src/org/eclipse/datatools/sqltools/sqleditor/internal/ConstructedSQLEditorResources.properties
@@ -49,3 +49,8 @@ SQLEditor.setStatementTerminatorAction.tooltip     =Set the statement terminator
 SQLEditor.setStatementTerminatorAction.image       =
 SQLEditor.setStatementTerminatorAction.description =Set the string that the editor should use to separate SQL statements
 
+SQLEditor.action.toggle.commect.label=Togg&le Comment
+SQLEditor.action.toggle.commect.tooltip=Toggle Comments For the Selected Lines
+SQLEditor.action.toggle.commect.image=
+SQLEditor.action.toggle.commect.description=Toggle comments for the selected lines
+
