--- a/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
+++ b/plugins/org.eclipse.datatools.connectivity/src/org/eclipse/datatools/connectivity/internal/resources.properties
@@ -24,6 +24,7 @@ CloseManagedConnectionJob.name=Closing {0} connection to {1}. (Error\: {2})
 CloseManagedConnectionJob.error=Error closing {0} connection to {1}.
 CloseConnectionEventJob.name=Processing close connection event for {0}.
 assert.invalid.profile = Parsing error\: invalid attribute ({0})
+assert.invalid.profile.duplicateFactory = Parsing error\: duplicate factory id ({0})
 dialog.title.error.loadwizard = Error loading new wizard in "{0}"!
 operation.new.connectionprofile = Creating profile\: "{0}"
 error.connect = Problem connecting to profile "{0}."  See log file for more details.
