[BZ141057] Changed tooltips for DSE toolbar buttons to remove &

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
@@ -19,11 +19,16 @@ DSE.Rename.label = Re&name
 DSE.Refresh.label = Ref&resh
 DSE.Ping.label = &Ping...
 DSE.AddCP.label = &New Connection Profile
+DSE.AddCP.tooltip = New Connection Profile
 DSE.Import.label = &Import
+DSE.Import.tooltip = Import
 DSE.Export.label = &Export
+DSE.Export.tooltip = Export
 DSE.CollapseAll.label = &Collapse All
 DSE.ExpandAll.label = &Expand All
+DSE.ExpandAll.tooltip = Expand All
 DSE.ShowCategory.label = &Show Category
+DSE.ShowCategory.tooltip = Show Category
 DSE.Name = Data Source Explorer
 DSE.ContentExtension.Decorator = Connection Profile Decorator
 DSE.ContentExtension.Decorator.Description = Decorate content extension node when connecting to the server fails.
