[BZ141369] Externalized Databases category for DSE profiles

--- a/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.db.generic/plugin.properties
@@ -13,3 +13,4 @@ org.eclipse.datatools.connectivity.db.db2udb.genericDriverTemplate = IBM DB2 Uni
 org.eclipse.datatools.connectivity.db.sybase.genericDriverTemplate = Sybase JDBC Driver for Sybase 12.x
 org.eclipse.datatools.connectivity.db.generic.genericDriverTemplate = Generic JDBC Driver
 org.eclipse.datatools.connectivity.db.oracle.genericDriverTemplate = Oracle JDBC Driver for Oracle 10
+databases.category = Databases
